syntax = "proto3";

package greet;
option go_package="./pb";

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

// Unary
message GreetRequest {
    Greeting greeting = 1;
}
message GreetResponse {
  string result = 1;
}

// Server streaming
message GreetManyTimesRequest {
  Greeting greeting = 1;
}
message GreetManyTimesResponse {
  string result = 1;
}

// Client streaming
message LongGreetRequest {
  Greeting greeting = 1;
}
message LongGreetResponse {
  string result = 1;
}

service GreetService {
  // Unary
  rpc Greet(GreetRequest) returns (GreetResponse) {};
  // Server streaming
  rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};
  // Client streaming
  rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};
}

